# cryptocurrencies-board

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.agents/skills/daily-summary/: instructions.md  skill.md
.agents/skills/discovery/: instructions.md  skill.md
.agents/skills/weekly-summary/: instructions.md
.docs/: claude-code-prompts.md  decisions.md
.docs/research/: asset-category-taxonomy.md  questions.md  strong-accumulate-refinement.md
.github/workflows/: daily-scan.yml  deploy-pages.yml
backtest/: strong_accumulate_backtest.py
backtest/cache/: btc_prices.json
backtest/results/: analysis.json  signals.json
docs/: decisions.md
pipeline/: assets.yaml  category.py  config.py  config.yaml  indicators.py  run.py
pipeline/discovery/: prompt.md
pipeline/fetchers/: __init__.py  coingecko.py  defillama.py  fear_greed.py  gli.py  onchain.py  qualitative.py  relative_strength.py  supply.py
pipeline/scoring/: __init__.py  actions.py  composite.py  rsi.py  wyckoff.py
pipeline/storage/: __init__.py  history.sqlite  migrations.py
public/: dashboard.js  dashboard.jsx  index.html  latest.json
scripts/: com.crypto.discovery.plist  com.crypto.scoring.plist  install-launchd.sh  run-discovery-ensemble.sh  run-discovery.sh  run-local.sh  run-scoring.sh
