[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptocurrencies-board"
version = "0.1.0"
description = "Cryptocurrencies board pipeline"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "python-dateutil>=2.8",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
